# sacct-ldap-sync

./: .gitignore  .main.py.swp  README.md  SlurmAccountManagerV41.py  config.yaml  config.yaml.example  ldaplib.py  main copy.py  main.py  main2.py  main3.py  mainold.py  openapi.json  pyproject.toml  pyproject.toml.old  sacctldapsync.spec  setup.py.old  slurm_api.yaml
docs/rest_api_docs/: index.html
py_api_client/: README.md  setup.py
py_api_client/docs/: SlurmApi.md  SlurmdbApi.md  V0040Account.md  V0040AccountShort.md  V0040Accounting.md  V0040AccountingAllocated.md  V0040AccountsAddCond.md  V0040AcctGatherEnergy.md  V0040Assoc.md  V0040AssocDefault.md  V0040AssocMax.md  V0040AssocMaxJobs.md  V0040AssocMaxJobsPer.md  V0040AssocMaxPer.md  V0040AssocMaxPerAccount.md  V0040AssocMaxTres.md  V0040AssocMaxTresGroup.md  V0040AssocMaxTresMinutes.md  V0040AssocMaxTresPer.md  V0040AssocMin.md  V0040AssocRecSet.md  V0040AssocSharesObjWrap.md  V0040AssocSharesObjWrapFairshare.md  V0040AssocSharesObjWrapTres.md  V0040AssocShort.md  V0040BfExitFields.md  V0040ClusterRec.md  V0040ClusterRecAssociations.md  V0040ClusterRecController.md  V0040ControllerPing.md  V0040Coord.md  V0040CronEntry.md  V0040CronEntryLine.md  V0040Float64NoVal.md  V0040Instance.md  V0040InstanceTime.md  V0040Job.md  V0040JobArray.md  V0040JobArrayLimits.md  V0040JobArrayLimitsMax.md  (+138 more)
py_api_client/openapi_client/: api_client.py  configuration.py  exceptions.py  rest.py
py_slurm_client/: .gitignore  README.md  pyproject.toml  setup.py
slurm_python_client/: README.md  setup.py
(+1234 files in other folders)
