[project]
name = "sacct-ldap-sync-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "ldap3>=2.9.1",
    "openapi>=2.0.0",
    "openapi-client>=1.1.7",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
[tool.uv.sources]
openapi-client = { path = "py_slurm_client" }
