[project]
name = "sacctldapsync"
version = "1.0.41"
description = "Slurm LDAP sync tool"
authors = [{name = "Marc rodriguez", email = "marc.rodriguez@nextmol.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "ldap3>=2.9.1",
    "openapi>=2.0.0",
    "openapi-client>=1.1.7",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
[tool.uv.sources]
openapi-client = { path = "py_slurm_client" }

[project.scripts]
sacctladpsync = "sacctldapsync:sacctldapsync"

[tool.setuptools.packages.find]
where = ["."]
include = ["sacctldapsync*"]
